syntax = "proto3";

package bunmart.kitchen.v1;

import "google/protobuf/timestamp.proto";

option java_package = "com.nsbm.bunmart.kitchen.v1";
option java_multiple_files = true;

// KitchenService â€” production orders. Order calls CreateProductionOrder; Kitchen calls Order.NotifyOrderPrepared when done.
service KitchenService {
  rpc CreateProductionOrder(CreateProductionOrderRequest) returns (CreateProductionOrderResponse);
  rpc GetProductionOrder(GetProductionOrderRequest) returns (GetProductionOrderResponse);
  rpc UpdateProductionPhase(UpdateProductionPhaseRequest) returns (UpdateProductionPhaseResponse);
}

message ProductionOrderLine {
  string product_id = 1;
  int32 quantity = 2;
}

message ProductionOrderInfo {
  string production_order_id = 1;
  string user_order_id = 2;
  repeated ProductionOrderLine lines = 3;
  string phase = 4;  // PREPARING, BAKING, COMPLETED
  int32 progress_percent = 5;
  repeated string preparation_image_urls = 6;
  string notes = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message CreateProductionOrderRequest {
  string user_order_id = 1;
  repeated ProductionOrderLine lines = 2;
}

message CreateProductionOrderResponse {
  string production_order_id = 1;
}

message GetProductionOrderRequest {
  string production_order_id = 1;
}

message GetProductionOrderResponse {
  ProductionOrderInfo order = 1;
}

message UpdateProductionPhaseRequest {
  string production_order_id = 1;
  string phase = 2;
  int32 progress_percent = 3;
  repeated string preparation_image_urls = 4;
  string notes = 5;
}

message UpdateProductionPhaseResponse {
  bool updated = 1;
}
